--- a/node-service/package.json
+++ b/node-service/package.json
@@ -2,15 +2,17 @@
   "name": "@china-caesar/devx-service",
   "version": "1.0.0",
   "description": "",
-  "main": "server.js",
+  "main": "app.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node server.js"
+    "start": "node app.js"
   },
   "author": "Caesar Liu",
   "license": "ISC",
   "dependencies": {
+    "cookie-parser": "^1.4.6",
     "express": "^4.18.2",
+    "morgan": "^1.10.0",
     "path": "^0.12.7"
   }
 }
