--- a/node-service/package.json
+++ b/node-service/package.json
@@ -8,14 +8,15 @@
     "start": "node app.js"
   },
   "bin": {
-    "devx": "app.js"
+    "kit": "app.js"
   },
   "author": "Caesar Liu",
   "license": "ISC",
   "dependencies": {
-    "adcd": "file:../../node-cli-core",
+    "axios": "^1.4.0",
     "cookie-parser": "^1.4.6",
     "express": "^4.18.2",
+    "kit-cli-core": "file:../../kit-node-cli-core",
     "morgan": "^1.10.0",
     "path": "^0.12.7"
   }
