--- a/node-service/package.json
+++ b/node-service/package.json
@@ -16,6 +16,7 @@
     "axios": "^1.4.0",
     "cookie-parser": "^1.4.6",
     "express": "^4.18.2",
+    "fs": "0.0.1-security",
     "kit-cli-core": "file:../../kit-node-cli-core",
     "morgan": "^1.10.0",
     "path": "^0.12.7"
