--- a/node-service/package.json
+++ b/node-service/package.json
@@ -19,6 +19,7 @@
     "fs": "0.0.1-security",
     "kit-cli-core": "file:../../kit-node-cli-core",
     "morgan": "^1.10.0",
+    "mysql": "^2.18.1",
     "path": "^0.12.7"
   }
 }
