--- a/node-page/package.json
+++ b/node-page/package.json
@@ -11,7 +11,9 @@
   "dependencies": {
     "axios": "^1.4.0",
     "element-plus": "^2.3.2",
+    "konva": "^9.2.0",
     "vue": "^3.2.47",
+    "vue-konva": "^3.0.2",
     "vue-router": "^4.1.6",
     "vuex": "^4.1.0"
   },
