--- a/node-page/package.json
+++ b/node-page/package.json
@@ -9,9 +9,11 @@
   "author": "Caesar Liu",
   "license": "ISC",
   "dependencies": {
+    "@kangc/v-md-editor": "^2.3.15",
     "axios": "^1.4.0",
     "element-plus": "^2.3.2",
     "konva": "^9.2.0",
+    "vite-plugin-prismjs": "0.0.8",
     "vue": "^3.2.47",
     "vue-konva": "^3.0.2",
     "vue-router": "^4.1.6",
