上传文件备份（未完成）

--- a/node-service/package.json
+++ b/node-service/package.json
@@ -19,6 +19,8 @@
     "fs": "0.0.1-security",
     "kit-cli-core": "file:../../kit-node-cli-core",
     "morgan": "^1.10.0",
+    "multer": "^1.4.5-lts.1",
+    "multiparty": "^4.2.3",
     "mysql": "^2.18.1",
     "path": "^0.12.7"
   }
