--- a/node-service/package.json
+++ b/node-service/package.json
@@ -22,6 +22,7 @@
     "multer": "^1.4.5-lts.1",
     "multiparty": "^4.2.3",
     "mysql": "^2.18.1",
+    "open": "^9.1.0",
     "path": "^0.12.7"
   }
 }
