--- a/node-service/package.json
+++ b/node-service/package.json
@@ -14,6 +14,7 @@
   "license": "ISC",
   "dependencies": {
     "axios": "^1.4.0",
+    "colors-console": "^1.0.3",
     "cookie-parser": "^1.4.6",
     "express": "^4.18.2",
     "fs": "0.0.1-security",
@@ -22,7 +23,6 @@
     "multer": "^1.4.5-lts.1",
     "multiparty": "^4.2.3",
     "mysql": "^2.18.1",
-    "open": "^9.1.0",
     "opn": "^6.0.0",
     "path": "^0.12.7"
   }
