格式化并执行sql

--- a/node-service/package.json
+++ b/node-service/package.json
@@ -24,6 +24,7 @@
     "multiparty": "^4.2.3",
     "mysql": "^2.18.1",
     "opn": "^6.0.0",
-    "path": "^0.12.7"
+    "path": "^0.12.7",
+    "sql-formatter": "^12.2.4"
   }
 }
