--- a/node-page/package.json
+++ b/node-page/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@kangc/v-md-editor": "^2.3.15",
     "axios": "^1.4.0",
+    "clipboard": "^2.0.11",
     "element-plus": "^2.3.2",
     "konva": "^9.2.0",
     "sortablejs": "^1.15.0",
