--- a/node-service/package.json
+++ b/node-service/package.json
@@ -17,11 +17,11 @@
     "colors-console": "^1.0.3",
     "cookie-parser": "^1.4.6",
     "express": "^4.18.2",
+    "form-data": "^4.0.0",
     "fs": "0.0.1-security",
+    "http-proxy-middleware": "^2.0.6",
     "kit-cli-core": "file:../../kit-node-cli-core",
     "morgan": "^1.10.0",
-    "multer": "^1.4.5-lts.1",
-    "multiparty": "^4.2.3",
     "mysql": "^2.18.1",
     "opn": "^6.0.0",
     "path": "^0.12.7",
