--- a/node-page/package.json
+++ b/node-page/package.json
@@ -17,6 +17,7 @@
     "sortablejs": "^1.15.0",
     "vite-plugin-prismjs": "0.0.8",
     "vue": "^3.2.47",
+    "vue-i18n": "^9.2.2",
     "vue-konva": "^3.0.2",
     "vue-router": "^4.1.6",
     "vuex": "^4.1.0"
