--- a/node-service/package.json
+++ b/node-service/package.json
@@ -1,8 +1,14 @@
 {
   "name": "goldpankit",
-  "version": "1.0.0",
+  "version": "1.0.2",
   "description": "",
   "main": "app.js",
+  "keywords": [
+    "goldpankit",
+    "kit",
+    "code generate",
+    "build framework"
+  ],
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node app.js"
@@ -19,8 +25,8 @@
     "express": "^4.18.2",
     "form-data": "^4.0.0",
     "fs": "0.0.1-security",
+    "goldpankit": "^1.0.0",
     "http-proxy-middleware": "^2.0.6",
-    "kit-cli-core": "file:../../kit-node-cli-core",
     "morgan": "^1.10.0",
     "mysql": "^2.18.1",
     "opn": "^6.0.0",
