--- a/node-service/package.json
+++ b/node-service/package.json
@@ -27,6 +27,7 @@
     "express": "^4.18.2",
     "form-data": "^4.0.0",
     "fs": "0.0.1-security",
+    "git-clone": "^0.2.0",
     "http-proxy-middleware": "^2.0.6",
     "ignore": "^5.2.4",
     "morgan": "^1.10.0",
