头像、图片处理

--- a/node-page/.env
+++ b/node-page/.env
@@ -1,3 +1,6 @@
 # api prefix
 VITE_LOCAL_API_PREFIX = '/local-api'
 VITE_REMOTE_API_PREFIX = '/remote-api'
+
+# 图片前缀
+VITE_IMAGE_PREFIX = '/remote-api/resource/image?f='
