--- a/node-page/.env
+++ b/node-page/.env
@@ -3,4 +3,4 @@ VITE_LOCAL_API_PREFIX = '/local-api'
 VITE_REMOTE_API_PREFIX = '/remote-api'
 
 # 图片前缀
-VITE_IMAGE_PREFIX = '/remote-api/resource/image?f='
+VITE_IMAGE_PREFIX = '/resource/image?f='
