--- a/node-service/package.json
+++ b/node-service/package.json
@@ -1,9 +1,11 @@
 {
   "name": "goldpankit",
-  "version": "2.4.3",
+  "version": "2.5.2",
   "description": "GoldPanKit is a brand new development kit designed to explore revolutionary ways to enhance development efficiency.",
   "main": "app.js",
   "keywords": [
+    "代码生成",
+    "脚手架平台",
     "goldpankit",
     "kit",
     "code generate",
@@ -21,7 +23,7 @@
   "author": "Caesar Liu",
   "license": "ISC",
   "repository": {
-    "url": "https://github.com/goldpankit/goldpankit"
+    "url": "https://gitee.com/goldpankit/goldpankit"
   },
   "dependencies": {
     "axios": "^1.4.0",
