--- a/node-service/package.json
+++ b/node-service/package.json
@@ -38,9 +38,11 @@
     "ignore": "^5.3.1",
     "morgan": "^1.10.0",
     "mysql": "^2.18.1",
+    "network-address": "^1.1.2",
     "opn": "^6.0.0",
     "path": "^0.12.7",
-    "sql-formatter": "^12.2.4"
+    "sql-formatter": "^12.2.4",
+    "yargs": "^17.7.2"
   },
   "volta": {
     "node": "18.15.0",
