--- a/node-page/package.json
+++ b/node-page/package.json
@@ -10,6 +10,7 @@
   "license": "ISC",
   "dependencies": {
     "@kangc/v-md-editor": "^2.3.15",
+    "animejs": "^3.2.2",
     "axios": "^1.6.0",
     "clipboard": "^2.0.11",
     "element-plus": "^2.7.4",
