--- a/node-page/package.json
+++ b/node-page/package.json
@@ -24,6 +24,7 @@
     "vue-i18n": "^9.2.2",
     "vue-konva": "^3.0.2",
     "vue-router": "^4.1.6",
+    "vue3-json-viewer": "^2.2.2",
     "vuex": "^4.1.0"
   },
   "devDependencies": {
