--- a/node-page/package.json
+++ b/node-page/package.json
@@ -30,6 +30,7 @@
   "devDependencies": {
     "@vitejs/plugin-vue": "^4.0.0",
     "@vitejs/plugin-vue-jsx": "^3.0.0",
+    "crypto-js": "^4.2.0",
     "sass": "^1.60.0",
     "sass-loader": "^13.2.2",
     "vite": "^4.1.4"
