chore: 添加 @types/crypto-js 类型支持

--- a/node-page/package.json
+++ b/node-page/package.json
@@ -28,6 +28,7 @@
     "vuex": "^4.1.0"
   },
   "devDependencies": {
+    "@types/crypto-js": "^4.2.2",
     "@vitejs/plugin-vue": "^4.0.0",
     "@vitejs/plugin-vue-jsx": "^3.0.0",
     "crypto-js": "^4.2.0",
